--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="pay">
         <h1>Payment</h1>
         <h2>Details</h2>
+        <p>Hello this site is powered by rajat.</p>
         <form action="">
             <div class="details">
                 <p>Name : *<input type="text" name="Name" required></p>
