--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Payment|Home</title>
 </head>
 <body>
-    <div class="pay">
+    
+    <h1>Hey There,</h1>
+    <h2>We are working on this website and it will launch soon</h2>
+    <h3>Regards Rajat</h3>
+<!--     <div class="pay">
         <h1>Payment</h1>
         <h2>Details</h2>
         <p>this site is powered by rajat.</p>
@@ -42,6 +46,6 @@
              
              <input type="button" value="Pay Now">
         </form>
-    </div>
+    </div> -->
 </body>
 </html>
