--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     
-    <h1>Hey There,</h1>
-    <h2>We are working on this website and it will launch soon</h2>
-    <h3>Regards Rajat</h3>
-<!--     <div class="pay">
+  <div class="pay">
         <h1>Payment</h1>
         <h2>Details</h2>
         <p>this site is powered by rajat.</p>
@@ -46,6 +43,6 @@
              
              <input type="button" value="Pay Now">
         </form>
-    </div> -->
+    </div> 
 </body>
 </html>
